--- a/src/compare_image/Dockerfile
+++ b/src/compare_image/Dockerfile
@@ -1,7 +1,8 @@
-FROM python:3.7-alpine
+FROM python:3.7
 
-# For gevent
-RUN apk add --no-cache python3-dev libffi-dev gcc musl-dev make
+# #
+# # For gevent
+# RUN apk add --no-cache python3-dev libffi-dev gcc musl-dev make 
 
 RUN pip install --upgrade pip
 RUN pip install numpy
@@ -13,7 +14,7 @@ RUN pip install gunicorn
 
 RUN mkdir files
 COPY app.py .
-COPY image_compare.py .
+COPY compare_image.py .
 COPY patched.py .
 
 CMD gunicorn --worker-class gevent \
