created tests for schedueld check

--- a/src/scheduled_check/Dockerfile
+++ b/src/scheduled_check/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.7-alpine
 RUN pip install --upgrade pip
 RUN pip install requests
 
+RUN mkdir files
 COPY check.py . 
 
-CMD python check.py
+CMD python scheduled_check.py
