--- a/kubernetes/services/cloud_object_storage_service.yaml
+++ b/kubernetes/services/cloud_object_storage_service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cloud-object-storage-service
+  name: cloud-object-storage
   labels:
-    app: cloud-object-storage-service
+    app: cloud-object-storage
 spec:
   ports:
     - port: 80
