--- a/kubernetes/services/screenshot_service.yaml
+++ b/kubernetes/services/screenshot_service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: screenshot-service
+  name: screenshot
   labels:
-    app: screenshot-service
+    app: screenshot
 spec:
   ports:
     - port: 80
