--- a/kubernetes/deployments/compare_deployment.yaml
+++ b/kubernetes/deployments/compare_deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: compare-image-deployment
+  name: compare-deployment
   labels:
-    app: compare-image-deployment
+    app: compare-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: compare-image-app
+      app: compare-app
   template:
     metadata:
       labels:
-        app: compare-image-app
+        app: compare-app
     spec:
       containers:
-        - name: compare-image-container
-          image: docker.io/felixchen1998/web-watcher-compare-image:latest
+        - name: compare-container
+          image: docker.io/felixchen1998/web-watcher-compare:latest
           resources:
             requests:
               memory: "64Mi"
