--- a/kubernetes/services/compare_service.yaml
+++ b/kubernetes/services/compare_service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: compare-image
+  name: compare
   labels:
-    app: compare-image
+    app: compare
 spec:
   ports:
     - port: 80
       protocol: TCP
       targetPort: 8002
   selector:
-    app: compare-image-app
+    app: compare-app
