--- a/src/cloud_object_storage/Dockerfile
+++ b/src/cloud_object_storage/Dockerfile
@@ -17,4 +17,4 @@ COPY patched.py .
 CMD gunicorn --worker-class gevent \
     --workers 2 \
     --bind 0.0.0.0:8001 \
-    patched:app
+    app:app
