remove patch file for compare

--- a/src/compare/Dockerfile
+++ b/src/compare/Dockerfile
@@ -20,4 +20,4 @@ COPY patched.py .
 CMD gunicorn --worker-class gevent \
     --workers 2 \
     --bind 0.0.0.0:8002 \
-    patched:app
+    app:app
