added two new folders

--- a/src/check/Dockerfile
+++ b/src/check/Dockerfile
@@ -3,7 +3,8 @@ FROM python:3.7-alpine
 RUN pip install --upgrade pip
 RUN pip install requests
 
-RUN mkdir files
+RUN mkdir new
+RUN mkdir old
 COPY check.py . 
 
 CMD python check.py
