finished check script

--- a/src/check/Dockerfile
+++ b/src/check/Dockerfile
@@ -3,8 +3,7 @@ FROM python:3.7-alpine
 RUN pip install --upgrade pip
 RUN pip install requests
 
-RUN mkdir new
-RUN mkdir old
+RUN mkdir files
 COPY check.py . 
 
 CMD python check.py
