--- a/src/check/Dockerfile
+++ b/src/check/Dockerfile
@@ -4,6 +4,7 @@ RUN pip install --upgrade pip
 RUN pip install requests
 
 RUN mkdir files
+COPY helpers.py . 
 COPY check.py . 
 
 CMD python check.py
