--- a/kubernetes/deployments/screenshot_deployment.yaml
+++ b/kubernetes/deployments/screenshot_deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: screenshot-deployment
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: screenshot-app
@@ -18,11 +18,8 @@ spec:
         - name: screenshot-container
           image: docker.io/felixchen1998/web-watcher-screenshot:latest
           resources:
-            requests:
-              memory: "64Mi"
-              cpu: "250m"
             limits:
-              memory: "128Mi"
+              memory: "1Gi"
               cpu: "500m"
           ports:
             - containerPort: 80
