--- a/src/frontend/webpack/package.json
+++ b/src/frontend/webpack/package.json
@@ -30,6 +30,7 @@
     "@material/data-table": "^6.0.0",
     "@material/menu": "^6.0.0",
     "@material/tab-bar": "^6.0.0",
+    "@material/textfield": "^6.0.0",
     "nunjucks": "^3.2.1"
   }
 }
