--- a/src/cloud_object_storage/Dockerfile
+++ b/src/cloud_object_storage/Dockerfile
@@ -3,15 +3,18 @@ FROM python:3.7-alpine
 # For gevent
 RUN apk add --no-cache python3-dev libffi-dev gcc musl-dev make
 
-RUN pip install --upgrade pip
-RUN pip install ibm-cos-sdk
-RUN pip install flask
-RUN pip install gevent
-RUN pip install gunicorn
+# RUN pip install --upgrade pip
+# RUN pip install ibm-cos-sdk
+# RUN pip install flask
+# RUN pip install gevent
+# RUN pip install gunicorn
 
 RUN mkdir files
+COPY requirements.txt . 
 COPY app.py .
 COPY cos.py .
+
+RUN pip install -r requirements.txt
 
 CMD gunicorn --worker-class gevent \
     --workers 2 \
