--- a/src/configure/Dockerfile
+++ b/src/configure/Dockerfile
@@ -4,15 +4,18 @@ FROM python:3.7-alpine
 RUN apk add --no-cache python3-dev libffi-dev gcc musl-dev make
 
 RUN pip install --upgrade pip
-RUN pip install cloudant
-RUN pip install flask
-RUN pip install flask-cors
-RUN pip install gevent
-RUN pip install gunicorn
+# RUN pip install cloudant
+# RUN pip install flask
+# RUN pip install flask-cors
+# RUN pip install gevent
+# RUN pip install gunicorn
 
 RUN mkdir files/
+COPY requirements.txt .
 COPY app.py .
 COPY configure.py .
+
+RUN pip install -r requirements.txt
 
 CMD gunicorn --worker-class gevent \
     --workers 2 \
