--- a/src/screenshot/Dockerfile
+++ b/src/screenshot/Dockerfile
@@ -1,38 +1,34 @@
-FROM python:3.7
+  
+# A minimal Docker image with Node and Puppeteer
+#
+# Initially based upon:
+# https://github.com/GoogleChrome/puppeteer/blob/master/docs/troubleshooting.md#running-puppeteer-in-docker
 
-# install google chrome
-RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
-RUN apt-get -y update
-RUN apt-get install -y google-chrome-stable
+FROM node:10.20.1-slim@sha256:05d1d270480b6e99753076b6656bb5a37edb7ca31af20c008568a556bc82d2a8
+    
+RUN  apt-get update \
+     && apt-get install -y wget gnupg ca-certificates \
+     && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
+     && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
+     && apt-get update \
+     # We install Chrome to get all the OS level dependencies, but Chrome itself
+     # is not actually used as it's packaged in the node puppeteer library.
+     # Alternatively, we could could include the entire dep list ourselves
+     # (https://github.com/puppeteer/puppeteer/blob/master/docs/troubleshooting.md#chrome-headless-doesnt-launch-on-unix)
+     # but that seems too easy to get out of date.
+     && apt-get install -y google-chrome-stable \
+     && rm -rf /var/lib/apt/lists/* \
+     && wget --quiet https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh -O /usr/sbin/wait-for-it.sh \
+     && chmod +x /usr/sbin/wait-for-it.sh
 
-# install chromedriver
-RUN apt-get install -yqq unzip
-RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
-RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
+# Install Puppeteer under /node_modules so it's available system-wide
+# ADD package.json package-lock.json /
+# RUN npm install
 
-# set display port to avoid crash
-ENV DISPLAY=:99
-ENV PRODUCTION=1
+RUN mkdir files/
+COPY package.json .
+RUN npm install
 
-# upgrade pip
-RUN pip install --upgrade pip
+COPY app.js .
 
-
-# RUN pip install selenium
-# RUN pip install flask
-# RUN pip install gevent
-# RUN pip install gunicorn
-
-RUN mkdir files
-COPY requirements.txt .
-COPY screenshot.py .
-COPY app.py .
-
-RUN pip install -r requirements.txt
-
-CMD gunicorn --worker-class gevent \
-    --workers 2 \
-    --bind 0.0.0.0:8003 \
-    app:app
-
+CMD node app.js
