--- a/src/configure/requirements.txt
+++ b/src/configure/requirements.txt
@@ -1,4 +1,6 @@
+bcrypt==3.1.7
 certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
 click==7.1.2
 cloudant==2.13.0
@@ -11,6 +13,7 @@ idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+pycparser==2.20
 requests==2.23.0
 six==1.14.0
 urllib3==1.25.9
