renamed some methods and cleaned up requirements

--- a/src/token/package.json
+++ b/src/token/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "@cloudant/cloudant": "^4.2.4",
-    "cloudant": "^1.10.0-NOTICE",
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {},
   "scripts": {
