--- a/kubernetes/services/frontend_service.yaml
+++ b/kubernetes/services/frontend_service.yaml
@@ -5,11 +5,10 @@ metadata:
   labels:
     app: frontend
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: 80
       protocol: TCP
       targetPort: 8005
-      nodePort: 30001
   selector:
     app: frontend-app
