--- a/kubernetes/services/configure_service.yaml
+++ b/kubernetes/services/configure_service.yaml
@@ -5,10 +5,11 @@ metadata:
   labels:
     app: configure
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - port: 80
       protocol: TCP
       targetPort: 8004
+      nodePort: 30001
   selector:
     app: configure-app
