--- a/kubernetes/services/frontend_service.yaml
+++ b/kubernetes/services/frontend_service.yaml
@@ -5,10 +5,11 @@ metadata:
   labels:
     app: frontend
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - port: 80
       protocol: TCP
       targetPort: 8005
+      nodePort: 30000
   selector:
     app: frontend-app
