--- a/kubernetes/jobs/check_job.yaml
+++ b/kubernetes/jobs/check_job.yaml
@@ -12,4 +12,4 @@ spec:
             - name: check-script
               image: docker.io/felixchen1998/web-watcher-check:latest
 
-          restartPolicy: OnFailure
+          restartPolicy: Never
