--- a/kubernetes/services/gateway_service.yaml
+++ b/kubernetes/services/gateway_service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: token
+  name: gateway
   labels:
-    app: token
+    app: gateway
 spec:
   type: NodePort
   ports:
@@ -12,4 +12,4 @@ spec:
       targetPort: 8008
       nodePort: 30002
   selector:
-    app: token-app
+    app: gateway-app
