--- a/src/compare/Dockerfile
+++ b/src/compare/Dockerfile
@@ -3,13 +3,14 @@ FROM python:3.7
 # # For gevent
 # RUN apk add --no-cache python3-dev libffi-dev gcc musl-dev make 
 
+COPY requirements.txt . 
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 
 RUN mkdir files
-COPY requirements.txt . 
 COPY app.py .
 COPY compare.py .
 
-RUN pip install -r requirements.txt
 
 CMD gunicorn --worker-class gevent \
     --workers 2 \
