--- a/src/cloud_object_storage/Dockerfile
+++ b/src/cloud_object_storage/Dockerfile
@@ -3,12 +3,14 @@ FROM python:3.7-alpine
 # For gevent
 RUN apk add --no-cache python3-dev libffi-dev gcc musl-dev make
 
-RUN mkdir files
 COPY requirements.txt . 
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
+
+RUN mkdir files
+
 COPY app.py .
 COPY cos.py .
-
-RUN pip install -r requirements.txt
 
 CMD gunicorn --worker-class gevent \
     --workers 2 \
