--- a/src/compare/Dockerfile
+++ b/src/compare/Dockerfile
@@ -14,5 +14,6 @@ COPY compare.py .
 
 CMD gunicorn --worker-class gevent \
     --workers 1 \
+    --timeout 180  \
     --bind 0.0.0.0:8002 \
     app:app
