contianer doesnt compile now..

--- a/src/check/Dockerfile
+++ b/src/check/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.14
 
+# env GOOS=linux GOARCH=amd64 go build -v .
 RUN mkdir files
-COPY check.go .
-COPY service_handlers.go .
 
-CMD go run check.go service_handlers.go
+COPY check .
+CMD ./check
